--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://f32ec1bf-ee69-4d7f-a23d-ff5045b10735.preview.emergentagent.com
 WDS_SOCKET_PORT=443
